--- a/competitors/static/competitors/css/index.css
+++ b/competitors/static/competitors/css/index.css
@@ -5,7 +5,7 @@
   height: 600px;
   -webkit-background-size: cover;
           background-size: cover;
-  background-position:center;
+  background-position: center;
 }
 
 /*For live score*/
@@ -35,8 +35,8 @@
 }
 
 #live-match a {
-  text-decoration: none;
   color: white;
+  text-decoration: none;
 }
 
 #live-match a:hover {
@@ -49,10 +49,10 @@
 
 #player-team-wrapper a {
   font-size: 0.7em;
-  text-decoration: none;
 /*  position: absolute;
   right: 1em;*/
   color: white;
+  position: relative;
 }
 
 #player-team-wrapper h4 {
@@ -65,28 +65,28 @@ responsive*/
 @media (min-width: 600px) and (max-width: 768px) {
   .col-xs-5 {
     float: left;
-    width: 41.66666667%;
-    position: relative;
     min-height: 1px;
     margin-left: 40px;
+    position: relative;
+    width: 41.66666667%;
   }
 }
 
 @media (min-width: 450px) and (max-width: 600px) {
   .col-tn-5 {
     float: left;
-    width: 41.66666667%;
-    position: relative;
     min-height: 1px;
     margin-left: 20px;
+    position: relative;
+    width: 41.66666667%;
   }
 }
 
 .player-box {
   height: auto;
-  background: white;
   margin-bottom: 25px;
   padding: 5px !important;
+  http://127.0.0.1:8000/
 }
 
 .player-image {
@@ -130,18 +130,17 @@ responsive*/
 
 .team-box {
   height: 90px;
-  background: white;
   margin-bottom: 20px;
-  padding-left: 3em;
-  padding-top: 5px;
+  padding: 5px, 0, 0, 3em;
+  background: white;
   background: -webkit-linear-gradient(left,#A9A9A9, #ffffff); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(left, #A9A9A9, #ffffff); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(left, #A9A9A9, #ffffff); /* For Firefox 3.6 to 15 */
     background: linear-gradient(left, #A9A9A9, #ffffff); /* Standard syntax */
 }
 
-.team-image p{
+.team-image p {
   padding: 30px;
-  font-weight: bold;
   color: #C0C0C0;
+  font-weight: bold;
 }
