--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -85,7 +85,7 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 Essential Info &nbsp;&nbsp;&nbsp;
-                                <a ng-show="!editPrimary" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
+                                <a ng-show="!editPrimary" href="javascript:;" ng-click="startUpdateUserProfile()" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
                                 <a ng-show="editPrimary" href="javascript:;" ng-click="updateUserProfile()" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
 
                             </div>
@@ -117,7 +117,7 @@
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Birthday</label>
                                         <div class="col-sm-9">
                                             <p class="form-control-static" ng-show="!editPrimary">{{userprofile.birthday}}</p>
-                                            <input type="text" ng-show="editPrimary" value="{{userprofile.birthday}}" class="birthday form-control" id="inputPassword3" placeholder="date" onfocus="(this.type='date')" onblur="(this.type='text')">
+                                            <input type="date" ng-show="editPrimary" class="birthday form-control" id="inputPassword3">
                                         </div>
                                     </div>
                                 </form>
@@ -341,15 +341,17 @@
 <script src="{{STATIC_URL}}competitors/js/directives/login_pop.js"></script>
 <!-- <script type="text/javascript" src="{{STATIC_URL}}competitors/js/profile.js"></script> -->
 <script type="text/javascript">
-competitorsApp.controller('profile',['$scope', function($scope){
-    console.log("{{userprofile.user.email}}")
+competitorsApp.controller('profile',['$scope', '$filter', function($scope, $filter){
     $scope.editPrimary = false;
     $scope.editSocial = false;
     $scope.personalshow = true;
     $scope.favoriteshow =false;
     $scope.friendsshow =false;
-    $scope.birthday = "{{userprofile.birthday}}"
-    console.log("{{userprofile.birthday}}");
+    $scope.birthday = "{{userprofile.birthday}}";
+    var time = new Date($scope.birthday);
+    $scope.dateForDatePicker = $filter('date')(time, "yyyy-MM-dd");
+    console.log($scope.birthday);
+    console.log($scope.dateForDatePicker);
     $scope.social = {
         "facebook":"{{userprofile.facebook}}",
         "google+":"{{userprofile.googleplus}}",
@@ -369,6 +371,15 @@ competitorsApp.controller('profile',['$scope', function($scope){
         console.log(325);
     };
 
+    $scope.startUpdateUserProfile = function(){
+        $scope.editPrimary=! $scope.editPrimary;
+        //document.getElementsByClassName("birthday")[0].datepicker({ dateFormat: 'yy-mm-dd' });
+        // angular.element("birthday").css("date-format", 'yy-mm-dd');
+        // console.log(angular.element("birthday").css);
+        document.getElementsByClassName("birthday")[0].value = $scope.dateForDatePicker;
+        console.log($scope.dateForDatePicker);
+    };
+
     $scope.updateUserProfile = function(){
         $scope.editPrimary=! $scope.editPrimary;
         $scope.userName = document.getElementsByClassName("userName")[0].value;
@@ -380,24 +391,24 @@ competitorsApp.controller('profile',['$scope', function($scope){
         console.log($scope.lastName);
         console.log($scope.birthday);
 
-        angular.element.ajax({
-                  type: "post",
-                  url: "/save_pic",
-                  data: {
-                      'userAdjustedImage': file,
-                      'csrfmiddlewaretoken': token,
-                      },
+        // angular.element.ajax({
+        //           type: "post",
+        //           url: "/save_pic",
+        //           data: {
+        //               'userAdjustedImage': file,
+        //               'csrfmiddlewaretoken': token,
+        //               },
 
-                  enctype: 'multipart/form-data',
+        //           enctype: 'multipart/form-data',
 
-                  success: function() {
-                      alert("success");
-                      location.reload(true);
-                  },
-                  error: function() {
-                          alert("Oh no! There seems to have been some problem with the picture you uploaded");
-                        },
-              });
+        //           success: function() {
+        //               alert("success");
+        //               location.reload(true);
+        //           },
+        //           error: function() {
+        //                   alert("Oh no! There seems to have been some problem with the picture you uploaded");
+        //                 },
+        //       });
 
 
     };
