--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -95,22 +95,22 @@
                                     <div class="form-group">
                                         <label for="inputEmail3" class="col-sm-2 control-label cp-profile-form-label">Username</label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.username}}</p>
-                                            <input ng-show="editPrimary" type="text" class="form-control input userName" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="{{currentUser.user.username}}">
+                                            <p class="form-control-static" ng-show="!editPrimary">{{userprofile.user.username}}</p>
+                                            <input ng-show="editPrimary" type="text" class="form-control input userName" value="{{userprofile.user.username}}" id="inputEmail3" placeholder="{{userprofile.user.username}}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Firstname</label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.first_name}}</p>
-                                            <input type="text" ng-show="editPrimary" class="form-control firstName" value="{{currentUser.user.first_name}}" id="inputPassword3" placeholder="{{currentUser.user.first_name}}">
+                                            <p class="form-control-static" ng-show="!editPrimary">{{userprofile.user.first_name}}</p>
+                                            <input type="text" ng-show="editPrimary" class="form-control firstName" value="{{userprofile.user.first_name}}" id="inputPassword3" placeholder="{{userprofile.user.first_name}}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Lastname</label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.last_name}}</p>
-                                            <input type="text" ng-show="editPrimary" value="{{currentUser.user.last_name}}" class="form-control lastName" id="inputPassword3" placeholder="{{currentUser.user.last_name}}">
+                                            <p class="form-control-static" ng-show="!editPrimary">{{userprofile.user.last_name}}</p>
+                                            <input type="text" ng-show="editPrimary" value="{{userprofile.user.last_name}}" class="form-control lastName" id="inputPassword3" placeholder="{{userprofile.user.last_name}}">
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -381,34 +381,41 @@ competitorsApp.controller('profile',['$scope', '$filter', function($scope, $filt
     };
 
     $scope.updateUserProfile = function(){
-        $scope.editPrimary=! $scope.editPrimary;
+        $scope.editPrimary = !$scope.editPrimary;
+        $scope.olduserName = "{{userprofile.user.username}}"
         $scope.userName = document.getElementsByClassName("userName")[0].value;
         $scope.firstName = document.getElementsByClassName("firstName")[0].value;
         $scope.lastName = document.getElementsByClassName("lastName")[0].value;
         $scope.birthday = document.getElementsByClassName("birthday")[0].value;
+        console.log($scope.olduserName);
         console.log($scope.userName);
         console.log($scope.firstName);
         console.log($scope.lastName);
         console.log($scope.birthday);
+        var token = $('input[name="csrfmiddlewaretoken"]').prop('value');
+        angular.element.ajax({
+                  type: "post",
+                  url: "/update_profile",
+                  data: {
+                      'csrfmiddlewaretoken': token,
+                      'oldusername': $scope.olduserName,
+                      'userName': $scope.userName,
+                      'firstName':$scope.firstName,
+                      'lastName': $scope.lastName,
+                      'birthday': $scope.birthday,
+                      },
 
-        // angular.element.ajax({
-        //           type: "post",
-        //           url: "/save_pic",
-        //           data: {
-        //               'userAdjustedImage': file,
-        //               'csrfmiddlewaretoken': token,
-        //               },
+                  enctype: 'multipart/form-data',
 
-        //           enctype: 'multipart/form-data',
-
-        //           success: function() {
-        //               alert("success");
-        //               location.reload(true);
-        //           },
-        //           error: function() {
-        //                   alert("Oh no! There seems to have been some problem with the picture you uploaded");
-        //                 },
-        //       });
+                  success: function() {
+                      alert("success");
+                      location.reload(true);
+                  },
+                  error: function(e) {
+                    console.log(e);
+                          alert("fail");
+                        },
+              });
 
 
     };
